# categorical

./: Categorical.v  Categories.v  README.md  TODO.org  _CoqProject  categorical.cabal  categories.cabal  package.yaml
src/: Categorical.hs  Conal.hs  Functions.hs  Main.hs
src/Categorical/: AST.hs  Gather.hs  NonDet.hs  Program.hs  Ringer.hs  Template.hs  Types.hs
test/: Main.hs
