name:          categorical
version:       0.1.0.0
synopsis:      Compiling to categories
homepage:      http://github.com/jwiegley/categorical
license:       MIT
license-file:  LICENSE
author:        John Wiegley
maintainer:    johnw@newartisans.com
category:      System
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:
    Categorical
  build-depends:       
      base >=4.9 && <4.10
    , profunctors >=5.2 && <5.3
    , concat
    , ghc-prim
    , free
    , containers
    , transformers
    , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

executable categorical
  main-is:             Main.hs
  build-depends:       
      base >=4.9 && <4.10
    , categorical
    , profunctors >=5.2 && <5.3
    , concat
    , ghc-prim
    , free
    , containers
    , transformers
    , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
